--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 -->
 <html>
 <head>
-<title>Pawan The Analyst Portfolio</title>
+<title>SREEJITA'S BUSINESS ANALYST Portfolio</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +20,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 <!-- Intro -->
 <div id="intro">
-<h1>Sreejita The Business Analyst Portfolio<br />
+<h1>Lovepreet's Project Portfolio<br />
+
 </h1>
-<p>Business Analyst | Data Analytics Expert | Business Analytics & Intelligence | Global Team Leadership 300+ | Data Analysis using SQL, Excel and BI tools @SREEJITA-MAJUMDER <a href="https://github.com/SREEJITA-MAJUMDER">@SREEJITA-MAJUMDER</a></p>
+<p>A Data Analyst skilled in Machine Learning, Python, SQL, Power BI, Tableau, and Advanced Excel <a href="https://github.com/Lovepreet12a">@Lovepreet</a> for My Github Profile
 
 <ul class="actions">
 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -31,7 +32,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 <!-- Header -->
 <header id="header">
-<!-- <a href="index.html" class="logo">MASSILVELY</a> -->
+<a href="index.html" class="logo">Data Analyst</a>
+
 </header>
 
 <!-- Nav -->
@@ -39,14 +41,11 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <ul class="links">
 <li class="active"><a href="index.html">Projects</a></li>
 
-<!-- <li><a href="generic.html">Generic Page</a></li>
-<li><a href="elements.html">Elements Reference</a></li> -->
+
 </ul>
 <ul class="icons">
-<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+<li><a href="https://www.linkedin.com/in/lovepreet-singh-350746144/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+<li><a href="https://github.com/Lovepreet12a" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 </ul>
 </nav>
 
@@ -57,225 +56,152 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <article class="post featured">
 <header class="major">
 
-<h2><a href="https://github.com/pawanglobal/LaughLoL/blob/main/DA/DataAnalysisBootCamp/MySQL/16_Data_Cleaning_Project.sql">Data Cleaning in SQL<br />
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Project%20on%20Job%20market%20analysis.ipynb">Job Market Analysis in Python<br />
 
 </a></h2>
-<p>In this project we take raw layoffs data and transform
-<br>it in SQL Server to make it more usable for analysis.</br></p>
+<p>In this project, I have applied data cleaning, descriptive statistics analysis on job market dataset. Moreover, performed the correlations, applied bivariate analysis, and then summarized at the end. </p>
 </header>
-<a href="https://github.com/pawanglobal/LaughLoL/blob/main/DA/DataAnalysisBootCamp/MySQL/16_Data_Cleaning_Project.sql" class="image main"><img src="images/layoffs.jpg" alt="" height="400" width="100%" /></a>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Project%20on%20Job%20market%20analysis.ipynb" class="image main"><img src="images/Job market.jpeg" alt="" /></a>
+
 <ul class="actions special">
-<li><a href="https://github.com/pawanglobal/LaughLoL/blob/main/DA/DataAnalysisBootCamp/MySQL/16_Data_Cleaning_Project.sql" class="button large">VIEW PROJECT</a></li>
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Project%20on%20Job%20market%20analysis.ipynb" class="button large">View Project</a></li>
 
 </ul>
 </article>
 
 <!-- Posts -->
 <section class="posts">
+
 <article>
 <header>
 
-<h2><a href="#">SQL<br />Data Exploration in SQL
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/CovidDataExploration.sql">Data Exploration in SQL<br />
 
 </a></h2>
 </header>
-<a href="https://github.com/pawanglobal/LaughLoL/blob/main/DA/DataAnalysisBootCamp/MySQL/17_Exploratory_Data_Analysis.sql" class="image fit"><img src="images/layoffs1.webp" alt="" height="272" width="100%" /></a>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/CovidDataExploration.sql" class="image fit"><img src="images/covid-19.jpg" alt="" /></a>
 
-<p>In this project, we have conducted data exploration of the "Layoffs Dataset" using SQL Server for in-depth analysis and insights.</p>
+<p>In this project, I used SQL Server to explore global COVID 19 data.</p>
 <ul class="actions special">
-<li><a href="https://github.com/pawanglobal/LaughLoL/blob/main/DA/DataAnalysisBootCamp/MySQL/17_Exploratory_Data_Analysis.sql" class="button">VIEW PROJECT</a></li>
-
-</ul>
-</article>
-<article>
-<header>
-<!-- <span class="date">April 14, 2017</span> -->
-<h2><a href="#">Python<br />Data cleaning with Pandas
-
-</a></h2>
-</header>
-<a href="https://github.com/pawanglobal/LaughLoL/blob/main/DA/DataAnalysisBootCamp/Python/Pandas/07_Data_Cleaning_Project.ipynb" class="image fit"><img src="images/pandas.webp" alt="" height="272"/></a>
-
-<p>In this project, we have cleaned the data using pandas to provide the call center with the contact numbers of individuals they can call.</p>
-<ul class="actions special">
-<li><a href="https://github.com/pawanglobal/LaughLoL/blob/main/DA/DataAnalysisBootCamp/Python/Pandas/07_Data_Cleaning_Project.ipynb" class="button">View Project</a></li>
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/CovidDataExploration.sql" class="button">View Project</a></li>
 
 </ul>
 </article>
 <article>
 <header>
-
-<h2><a href="#">TABLEAU <br /> TABLEAU PROJECTS
-
-</a></h2>
-</header>
-<a href="https://public.tableau.com/app/profile/pawan.kumar6860/vizzes" class="image fit"><img src="images/tableau.jpeg" alt="" height="272" width="100%" /></a>
-
-<p>Explore my dynamic Tableau projects, showcasing my expertise in data visualization and analysis. Each project demonstrates my ability to turn complex data into clear, actionable insights.</p>
-<ul class="actions special">
-<li><a href="https://public.tableau.com/app/profile/pawan.kumar6860/vizzes" class="button">VIEW PROJECT</a></li>
-</ul>
-</article>
-<article>
-<header>
-<!-- <span class="date">April 18, 2017</span> -->
-<h2><a href="#">Excel<br />Excel Project
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Sales_Data_Explored.sql">Exploratory analysis of Sales data in SQL Server <br />
 
 </a></h2>
 </header>
-<a href="https://github.com/pawanglobal/python_b_f_z_t_h/blob/main/milestone_project_1/first_project.ipynb" class="image fit"><img src="images/excel1.jpeg" alt="" height="272" /></a>
-<p>In this project, we analyzed the bike buyers dataset, performed data cleaning, built pivot tables, and developed a dashboard using Excel. Download the file to view the detailed project.</p>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Sales_Data_Explored.sql" class="image fit"><img src="images/Sales.jpg" alt="" /></a>
+
+<p>In this project, I have explored and analysed sales data by using window functions, CTE, Temporary tables and many more.</p>
 <ul class="actions special">
-<li><a href="https://github.com/pawanglobal/python_b_f_z_t_h/blob/main/milestone_project_1/first_project.ipynb" class="button">View Project</a></li>
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Sales_Data_Explored.sql" class="button">View Project</a></li>
 
 </ul>
 </article>
 <article>
 <header>
-<!-- <span class="date">April 14, 2017</span> -->
-<h2><a href="#">Python<br />Tic Tac Toe Project Game
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Unicorn_Companies_PowerBI_Dashboard.png">Power BI Project<br />
 
 </a></h2>
 </header>
-<a href="https://github.com/pawanglobal/python_b_f_z_t_h/blob/main/milestone_project_1/first_project.ipynb" class="image fit"><img src="images/Build-an-AI-Game-Engine-for-Tic-Tac-Toe.avif" alt="" height="272"/></a>
-
-<p>This project showcases functional organization, loop efficiency, user interaction, randomization, conditional logic, output management, and list manipulation. It highlights Python's versatility and explores how it creates engaging user experiences.</p>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Unicorn_Companies_PowerBI_Dashboard.png" class="image fit"><img src="images/Unicorn.jpg" alt="" /></a>
+<p>In this project, I have explored unicorn companies data in SQL Server and then created Power BI dashboard.</p>
 <ul class="actions special">
-<li><a href="https://github.com/pawanglobal/python_b_f_z_t_h/blob/main/milestone_project_1/first_project.ipynb" class="button">View Project</a></li>
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Unicorn_Companies_PowerBI_Dashboard.png" class="button">View Project</a></li>
 
 </ul>
-</article>
+
 </article>
 <article>
 <header>
-<!-- <span class="date">April 14, 2017</span> -->
-<h2><a href="#">Python<br />WAR Game Project
-
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Hotel%20Project%20PowerBI%20dashboard.pdf">Exploratory analysis of hotel data in SQL server and made dashboard in Power BI <br />
 </a></h2>
 </header>
-<a href="https://github.com/pawanglobal/My-Python-Learning/blob/main/war.py" class="image fit"><img src="images/war.jpeg" alt="" height="272"/></a>
-
-<p>This project is a card game called "War" with object-oriented programming principles. It features class-based design, deck shuffling, and player interactions, showcasing Python's capabilities in creating complex, interactive applications.</p>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Hotel%20Project%20PowerBI%20dashboard.pdf" class="image fit"><img src="images/Hotel.jpg" alt="" /></a>
+<p>In this project, I have explored hotel data in SQL Server and then made a dashboard in Power BI, which includes donut chart, line chart, slicers and many more.</p>
 <ul class="actions special">
-<li><a href="https://github.com/pawanglobal/My-Python-Learning/blob/main/war.py" class="button">View Project</a></li>
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Hotel%20Project%20PowerBI%20dashboard.pdf" class="button">View Project</a></li>
+
 </ul>
 </article>
 <article>
 <header>
-<!-- <span class="date">April 14, 2017</span> -->
-<h2><a href="#">SQL Practice Problems<br /> 57 Challenges
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Netflix.ipynb">Data Cleaning, Exploratory Data Analysis, and Feature Engineering in Python <br />
+</a></h2>
+</header>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Netflix.ipynb" class="image fit"><img src="images/Netflix.jpg" alt="" /></a>
+
+<p>In this project, I have cleaned Netflix data set, performed feature engineering, and also did exploratory data analysis to find some useful insights.</p>
+<ul class="actions special">
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Netflix.ipynb" class="button">View Project</a></li>
+</ul>
+</article>
+<article>
+
+<header>
+
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Movie%20Correlation%20Project.ipynb">Movies Data Cleaning in Python<br />
 
 </a></h2>
 </header>
-<a href="https://github.com/pawanglobal/LaughLoL/tree/main/DA/DataAnalysisBootCamp/SQL_problem_solving" class="image fit"><img src="images/57.jpg" alt="" height="272"/></a>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Movie%20Correlation%20Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
 
-<p>I completed the challenges presented in the book 'SQL Practice Problems: 57 Beginning, Intermediate, and Advanced Challenges for You to Solve Using a ‘Learn-by-Doing’ Approach.' This project is a comprehensive exercise designed to enhance and showcase my SQL skills through practical problem-solving.</p>
+<p>In this project, I cleaned the movies data of last 4 decades. Moreover, I plotted some graphs by using matplotlib and seaborn which shows the correlation of different variables and makes it more usable for analysis</p>
 <ul class="actions special">
-<li><a href="https://github.com/pawanglobal/LaughLoL/tree/main/DA/DataAnalysisBootCamp/SQL_problem_solving" class="button">View Project</a></li>
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/Movie%20Correlation%20Project.ipynb" class="button">View Project</a></li>
+
+</ul>
+</article>
+<article>
+
+<header>
+
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/AdventureWorks_PowerBI_Dashboard.pdf">Power BI Project<br />
+
+</a></h2>
+</header>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/AdventureWorks_PowerBI_Dashboard.pdf" class="image fit"><img src="images/Power BI.jpg" alt="" /></a>
+<p>Power BI dashboard on Adventure Works Cycles company in which I extracted, tranformed, and then loaded the data. After that I made some useful visuals after analysing the whole data.</p>
+<ul class="actions special">
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/AdventureWorks_PowerBI_Dashboard.pdf" class="button">View Project</a></li>
+
+</ul>
+</article>
+<article>
+<header>
+
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/global_superstore_PowerBI_dashboard.pdf">Power BI Project<br />
+
+</a></h2>
+</header>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/global_superstore_PowerBI_dashboard.pdf" class="image fit"><img src="images/SuperStore.webp" alt="" /></a>
+<p>Power BI dashboard on Global Superstore data. I have used slicers, maps, donut charts and many more to get some useful insights out of the raw data.</p>
+<ul class="actions special">
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/global_superstore_PowerBI_dashboard.pdf" class="button">View Project</a></li>
+
+</ul>
+</article>
+<article>
+<header>
+
+<h2><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/CryptoCurrency_PowerBI_Project.pdf">Power BI Project<br />
+
+</a></h2>
+</header>
+<a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/CryptoCurrency_PowerBI_Project.pdf" class="image fit"><img src="images/CryptoCurrency.jpg" alt="" /></a>
+<p>Power BI dashboard on CryptoCurrency. I have used line chart, slicers, maps, donut charts and many more to get some useful insights out of the raw data.</p>
+<ul class="actions special">
+<li><a href="https://github.com/Lovepreet12a/DataAnalystProjectPortfolio/blob/main/CryptoCurrency_PowerBI_Project.pdf" class="button">View Project</a></li>
 
 </ul>
 </article>
 
-<!-- <article>
-<header>
-<span class="date">April 11, 2017</span>
-<h2><a href="#">Power BI Project<br />
-</a></h2>
-</header>
-<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-<ul class="actions special">
-<li><a href="#" class="button">Full Story</a></li>
-</ul>
-</article> -->
-<!-- <article>
-<header>
-<span class="date">April 7, 2017</span>
-<h2><a href="#">Augue lorem<br />
-primis vestibulum</a></h2>
-</header>
-<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-<ul class="actions special">
-<li><a href="#" class="button">Full Story</a></li>
-</ul>
-</article> -->
-</section>
-
-<!-- Footer -->
-<!-- <footer>
-<div class="pagination"> -->
-<!--<a href="#" class="previous">Prev</a>-->
-<!-- <a href="#" class="page active">1</a>
-<a href="#" class="page">2</a>
-<a href="#" class="page">3</a>
-<span class="extra">&hellip;</span>
-<a href="#" class="page">8</a>
-<a href="#" class="page">9</a>
-<a href="#" class="page">10</a>
-<a href="#" class="next">Next</a>
-</div>
-</footer>
-
-</div> -->
-
-<!-- Footer -->
-<footer id="footer">
-<!-- <section>
-<form method="post" action="#">
-<div class="fields">
-<div class="field">
-<label for="name">Name</label>
-<input type="text" name="name" id="name" />
-</div>
-<div class="field">
-<label for="email">Email</label>
-<input type="text" name="email" id="email" />
-</div>
-<div class="field">
-<label for="message">Message</label>
-<textarea name="message" id="message" rows="3"></textarea>
-</div>
-</div>
-<ul class="actions">
-<li><input type="submit" value="Send Message" /></li>
-</ul>
-</form>
-</section> -->
-<section class="split contact">
-<section class="alt">
-<h3>Address</h3>
-<p><br />
-Ostrava, 71000</p>
-</section>
-<section>
-<h3>Phone</h3>
-<p><a href="#">+420 770669202</a></p>
-
-</section>
-<section>
-<h3>Email</h3>
-<p><a href="#">pawanglobal07@gmail.com</a></p>
-
-</section>
-<section>
-<h3>Social</h3>
-<ul class="icons alt">
-<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-<li><a href="https://github.com/pawanglobal" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-</ul>
 </section>
 </section>
 </footer>
-
-<!-- Copyright -->
-<div id="copyright">
-<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-</div>
-
-</div>
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
