--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 <!-- Intro -->
 <div id="intro">
-<h1>Lovepreet's Project Portfolio<br />
+<h1>Sreejita's Project Portfolio<br />
 
 </h1>
-<p>A Data Analyst skilled in Machine Learning, Python, SQL, Power BI, Tableau, and Advanced Excel <a href="https://github.com/Lovepreet12a">@Lovepreet</a> for My Github Profile
+<p>Business Analyst | Data Analytics Expert | Business Analytics & Intelligence | Global Team Leadership 300+ | Data Analysis using SQL, Excel and BI tools <a href="https://github.com/SREEJITA-MAJUMDER/SREEJITA-S-PROJECT-PORTFOLIO"</a> for My Github Profile
 
 <ul class="actions">
 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -32,7 +32,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 <!-- Header -->
 <header id="header">
-<a href="index.html" class="logo">Data Analyst</a>
+<a href="index.html" class="logo">Business Analyst</a>
 
 </header>
 
@@ -44,8 +44,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 </ul>
 <ul class="icons">
-<li><a href="https://www.linkedin.com/in/lovepreet-singh-350746144/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-<li><a href="https://github.com/Lovepreet12a" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+<li><a href="https://www.linkedin.com/in/sreejitamajumder/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+<li><a href="https://github.com/SREEJITA-MAJUMDER" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 </ul>
 </nav>
 
